# demo6

./: CMakeLists.txt  README.md  README_DETAILED.md  partitions.csv  sdkconfig.defaults  闹钟页面.html
.claude/: settings.local.json
.mpkg-build/: doodle.mpkg  gomoku.mpkg  hello.mpkg  notif.mpkg  pomodoro.mpkg  settings.mpkg  tictactoe.mpkg
.trellis/: .template-hashes.json
.trellis/_backlog/_extracted/: README.md  add_files_to_tracker.py  audit_spec_iot_reuse_safety.py  backlog__C--Users-ChenShuang-Desktop-OLED-----.md.md  backlog_score__C--Users-ChenShuang-Desktop-OLED-----.md.md  backlog_score__C--Users-ChenShuang-Desktop-esp32-demo5.md.md  backlog_score__C--Users-ChenShuang-Desktop-esp32-demo6.md.md  backlog_seq__C--Users-ChenShuang-Desktop-OLED-----.md.md  backlog_seq__C--Users-ChenShuang-Desktop-esp32-demo5.md.md  backlog_seq__C--Users-ChenShuang-Desktop-esp32-demo6.md.md  block_outline.py  build_distillation_backlog.py  build_project_backlogs.py  bulk_add_contract_reuse_guard.py  bulk_add_pitfall_reuse_guard.py  bulk_add_playbook_reuse_guard.py  distillation_backlog.md  extract_conversations.py  migrate_done_prefix.py  peek_next.py  project_tracker.json  repair_project_tracker_json.py  show_lines.py  show_lines_escaped.py  source_coverage_report.md  source_index.json  tracker_tools.py
.trellis/_backlog/_extracted_v1_20260420/: backlog__C--Users-ChenShuang-Desktop-esp32-demo5.md.md  backlog__C--Users-ChenShuang-Desktop-esp32-demo6.md.md  backlog_score__C--Users-ChenShuang-Desktop-OLED-----.md.md  backlog_score__C--Users-ChenShuang-Desktop-esp32-demo5.md.md  project_tracker.json  source_coverage_report.md  (+4 more)
app/: CMakeLists.txt  app_fonts.c  app_fonts.h  app_main.c  app_main.h  app_ui.c  app_ui.h  weather_icons.c  weather_icons.h
app/apps/dynapp_host/pages/: page_dynapp_host.c
app/apps/launcher/pages/: page_launcher.c
app/apps/music/pages/: page_music.c
app/apps/notifications/pages/: page_notifications.c
app/apps/settings/pages/: settings_about.c  settings_home.c  settings_time.c
app/apps/system/pages/: page_system.c
app/apps/weather/: weather_app.c
app/apps/weather/pages/: page_weather.c
app/pages/: page_about.c  page_about.h  page_control.c  page_control.h  page_dynamic_app.c  page_dynamic_app.h  page_menu.c  page_menu.h  page_menu_modal.c  page_menu_modal.h  page_music.c  page_music.h  page_notifications.c  page_notifications.h  page_system.c  page_system.h  page_time.c  page_time.h  page_time_adjust.c  page_time_adjust.h  page_weather.c  page_weather.h
app/ui/: app_shell_ui.c  app_shell_ui.h  ui_anim.c  ui_anim.h  ui_modal_card.c  ui_modal_card.h  ui_statusbar.c  ui_statusbar.h  ui_tokens.h  ui_widgets.c  ui_widgets.h
docs/: BLE集成开发日志.md  优化渲染速度方案.md  动态 App 系统 (V0.8) 全栈开发详志.md  动态App(MicroQuickJS)_MVP设计.md  动态app_JS_API速查.md  动态app_UI设计系统.md  动态app开发指南.md  动态app开发者指南.md  开发内容.md  当前的三层架构框架图.md  未完成的对话.md  未总结出工作日志的对话记录.md  驱动移植.md
drivers/: CMakeLists.txt  ble_driver.c  ble_driver.h  board_config.h  lcd_panel.c  lcd_panel.h  lvgl_port.c  lvgl_port.h  touch_ft5x06.c  touch_ft5x06.h
dynamic_app/: CMakeLists.txt  dynamic_app.c  dynamic_app.h  dynamic_app_internal.h  dynamic_app_natives.c  dynamic_app_registry.c  dynamic_app_registry.h  dynamic_app_runtime.c  dynamic_app_ui.c  dynamic_app_ui.h  dynamic_app_ui_internal.h  dynamic_app_ui_registry.c  dynamic_app_ui_styles.c
dynamic_app/scripts/: app.js  aquarium.js  calc.js  echo.js  game2048.js  hello.js  imgdemo.js  mole.js  music.js  notes.js  prelude.js  reaction.js  timer.js  weather.js
dynamic_app/scripts/dash/: main.js
dynamic_app/scripts/dashboard_pkg/: _make_icon.py  _make_pngs.py  main.js
dynamic_app/scripts/doodle_pkg/: _make_pngs.py  main.js  manifest.json
dynamic_app/scripts/gomoku_pkg/: main.js
dynamic_app/scripts/habit_pkg/: _make_icon.py  main.js
dynamic_app/scripts/hello_pkg/: main.js  manifest.json
dynamic_app/scripts/imgdemo_pkg/: _make_icon.py  _make_pngs.py
dynamic_app/scripts/memory_pkg/: _make_icon.py  _make_pngs.py  main.js
dynamic_app/scripts/notif_pkg/: README.md  main.js
dynamic_app/scripts/pomodoro_pkg/: main.js  manifest.json
dynamic_app/scripts/tictactoe_pkg/: main.js  manifest.json
framework/: CMakeLists.txt  page_router.c  page_router.h
main/: CMakeLists.txt  idf_component.yml  main.c
services/: CMakeLists.txt  ble_conn.c  ble_conn.h  control_service.c  control_service.h  dynapp_bridge_service.c  dynapp_bridge_service.h  dynapp_storage.c  dynapp_storage.h  dynapp_upload_service.c  dynapp_upload_service.h  media_manager.c  media_manager.h  media_service.c  media_service.h  notify_manager.c  notify_manager.h  notify_service.c  notify_service.h  persist.c  persist.h  settings_store.c  settings_store.h  system_service.c  system_service.h  time_manager.h  time_service.c  time_service.h  weather_manager.h  weather_service.c  weather_service.h
services/manager/: dynapp_upload_manager.c  dynapp_upload_manager.h  media_manager.c  notify_manager.c  notify_manager.h  system_manager.c  system_manager.h  time_manager.c  weather_manager.c
storage/: CMakeLists.txt  backlight_storage.c  fs_littlefs.c  fs_littlefs.h  notify_storage.c  persist.h  time_storage.c
storage/littlefs/: dynapp_fs_worker.c  dynapp_fs_worker.h  dynapp_script_store.c  dynapp_script_store.h  fs_littlefs.h
storage/nvs/: backlight_storage.h  notify_storage.h  time_storage.h
tools/: ble_time_sync.py  control_panel_client.py  desktop_companion.py  dynapp_bridge_test.py  dynapp_companion.py  dynapp_push_gui.py  gen_font_subset.py  media_publisher.py  patch_esp_mquickjs_component.py  requirements.txt
tools/companion/: __init__.py  __main__.py  config.py  constants.py  plugin_manager.py  plugin_sdk.py
tools/dynapp_sdk/: __init__.py  client.py  constants.py  router.py
tools/dynapp_uploader/: __init__.py  client.py  constants.py  protocol.py
tools/plugins/: README.md
tools/providers/: __init__.py  media_provider.py  weather_provider.py
ui_mockups/: README.md
ui_mockups/_shared/: frame.css  tokens.css
ui_mockups/weather/: v1.html  v2.html  v3.html  v4.html  v5.html
(+198 files in other folders)
