idf_component_register(
    SRCS
        "app_main.c"
        "app_fonts.c"
        "pages/page_time.c"
        "pages/page_menu.c"
        "pages/page_about.c"
        "pages/page_weather.c"
        "pages/page_notifications.c"
        "pages/page_control.c"
        "pages/page_music.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        framework
        drivers
        services
        lvgl
)
