idf_component_register(
    SRCS
        "time_service.c"
        "time_manager.c"
        "weather_manager.c"
        "weather_service.c"
        "notify_manager.c"
        "notify_service.c"
        "persist.c"
        "settings_store.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        bt
    REQUIRES
        esp_timer
        nvs_flash
)
