idf_component_register(
    SRCS
        "time_service.c"
        "time_manager.c"
        "weather_manager.c"
        "weather_service.c"
        "notify_manager.c"
        "notify_service.c"
        "media_manager.c"
        "media_service.c"
        "control_service.c"
        "ble_conn.c"
        "persist.c"
        "settings_store.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        bt
    REQUIRES
        esp_timer
        nvs_flash
)
